--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.21"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
