--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "Satriale's Pork Shop REST API.",
   "main": "server.js",
   "scripts": {
-    "start": "npm server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "repository": {
